--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="flex justify-center items-center mx-auto h-screen">
+  <body
+    class="flex justify-center items-center mx-auto h-screen m-0 p-0 bg-blue-100"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
